--- a/SomeApp.csproj
+++ b/SomeApp.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Services\" />
+    <Folder Include="Application\DTOs\" />
+    <Folder Include="Domain\Repositories\" />
     <Folder Include="Tests\" />
   </ItemGroup>
 
